# agentic_knowledge_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  数据处理流程.md
.github/workflows/: deploy.yml
api/: __init__.py
api/dependencies/: __init__.py  auth.py  database.py  pagination.py
api/middlewares/: __init__.py  cors.py  error_handler.py  logging.py
api/routers/: __init__.py
api/schemas/: __init__.py  common.py
api/utils/: __init__.py  response.py  validators.py
config/: components.json  config.json  config.toml  multimodal_models.json  thinking_models.json
docs/API设计/: 回收站删除恢复逻辑.md
docs/特殊功能设计/: Skill技能系统设计方案.md  知识库对话设计.md
docs/知乎分享文/: share.md
docs/组件策略设计/: 文本分块设计.md
docs/通用文件和工作空间文件知识库/: Agentic知识库召回Skills设计.md  通用文件索引高性能架构设计.md  通用文件高级语义索引召回设计.md
examples/: embedding_quickstart.py  file_parser_service_example.py  llm_quickstart.py  mysql_connection_example.py  mysql_context_manager_example.py  parser_usage_example.py  redis_key_management_example.py  redis_usage_example.py  storage_manager_example.py
scripts/: README.md  __init__.py  diagnose_section_tree.py  export_milvus_schema.py  migrate_chunk_search_text.py  start_all_workers.py  verify_mllm_cache_hit.py
scripts/debug/: backfill_section_document_parent_leaf.py  build_section_tree.py
scripts/milvus/: read_milvus_db.py
scripts/mongodb/: cleanup_deleted_records.js  cleanup_deleted_records.py
scripts/mysql/: cleanup_deleted_records.py  cleanup_deleted_records.sql
src/: __init__.py
src/chat/: __init__.py  protocol.py  stream_buffer.py
src/client/: __init__.py  embedding.py  embeddings.py  llm.py  mineru.py  reranker.py
src/prompts/: __init__.py
src/retrieve/: __init__.py
(+485 files in other folders)
