[project]
name = "agentic-knowledge-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pymilvus[milvus-lite]>=2.6.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
