[project]
name = "agentic-knowledge-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiokafka[lz4]>=0.13.0",
    "beanie>=2.0.1",
    "cryptography",
    "deepagents>=0.5.1",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.0",
    "litellm>=1.78.0",
    "loguru>=0.7.3",
    "lz4>=4.4.5",
    "minio>=7.2.20",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymilvus[milvus-lite,model]>=2.6.6",
    "pymysql>=1.1.2",
    "pypdf>=6.6.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis[hiredis]>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "toml>=0.10.2",
    "uvicorn>=0.41.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
